examples/test/testpolicy19580.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19580
  namespace: namespace327
spec:
  podSelector:
    matchLabels:
      key41: value8
      key40: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value43
          key5: value44
      podSelector:
        matchLabels:
          key34: value30
